@@ -4,7 +4,7 @@ Links: overview-links.h usage-links.h support-links.h
 <h3>TMDA Results</h3>
 
 Results thus far have been extremely favorable.  Before TMDA my
-mailbox was getting bombarded by 1300+ pieces of junk mail per month as
+mailbox was getting bombarded by ~1500 pieces of junk mail per month as
 the result of my e-mail address being heavily publicized on USENET and
 various Internet mailing lists.  Now I almost never see a piece of
 SPAM (perhaps 1 every 4-6 weeks or so).  But don't just take my word for it..
@@ -41,6 +41,11 @@ Robin S. Socha on the <em>tmda-users mailing list</em>
 
 "It's no less than the most effective tool against spam currently available."<br>
 Moe Webber on <em>comp.os.linux.networking</em>
+<br><br>
+
+"I just want to thank Jason and anyone that works on TMDA for a
+product that I believe represents the future of email."<br>
+Stacey A. Ross on the <em>tmda-users mailing list</em>
 <br><br>
 
 "Highly recommended.  My 30-a-day spam flood suddenly dried up
