@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu May 23 13:29:38 2002 -->
+<!-- Fri May 31 13:24:18 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -135,7 +135,7 @@ Author
 <h3>TMDA Results</h3>
 
 Results thus far have been extremely favorable.  Before TMDA my
-mailbox was getting bombarded by 1300+ pieces of junk mail per month as
+mailbox was getting bombarded by ~1500 pieces of junk mail per month as
 the result of my e-mail address being heavily publicized on USENET and
 various Internet mailing lists.  Now I almost never see a piece of
 SPAM (perhaps 1 every 4-6 weeks or so).  But don't just take my word for it..
@@ -172,6 +172,11 @@ Robin S. Socha on the <em>tmda-users mailing list</em>
 
 "It's no less than the most effective tool against spam currently available."<br>
 Moe Webber on <em>comp.os.linux.networking</em>
+<br><br>
+
+"I just want to thank Jason and anyone that works on TMDA for a
+product that I believe represents the future of email."<br>
+Stacey A. Ross on the <em>tmda-users mailing list</em>
 <br><br>
 
 "Highly recommended.  My 30-a-day spam flood suddenly dried up
