@@ -1,3 +1,7 @@
+2002-05-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* results.ht (Links): Add testimonial from Stacey A. Ross.
+
 2002-05-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* faq.ht: Update link to QAdmin-TMDA.
